@@ -25,3 +25,4 @@ Jonas M. Gastal <jgastal@profusion.mobi>
 Raphael Kubo da Costa <rakuco@freebsd.org>
 Jérôme Pinot <ngc891@gmail.com>
 Mike Blumenkrantz <michael.blumenkrantz@gmail.com>
+Patryk Kaczmarek <patryk.k@samsung.com>
